# AI-RecoverOps-

./: .env.production  .gitignore  AI-RecoverOps.bat  BROWSER_TROUBLESHOOTING.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  GET_STARTED.md  INSTALL.md  LAUNCH_SUCCESS.md  LICENSE  MANIFEST.in  PRODUCTION_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_SIMPLE.md  README_UNIVERSAL.md  START_HERE.md  SUCCESS_CONFIRMED.md  SYSTEM_ARCHITECTURE.md  SYSTEM_STATUS_REPORT.md  UNIVERSAL_TOOL_GUIDE.md  USER_GUIDE.md  ai-recoverops-cli.py  ai-recoverops-installer.py  ai-recoverops-setup.py  ai_recoverops.db  ai_recoverops_production.db  aiops  config.yaml  dashboard.html  demo.py  deploy-production.py  install.ps1  install.py  install.sh  launch-ai-recoverops.py  open-dashboard.html  pyproject.toml  (+12 more)
.github/workflows/: ci-cd.yml
ai_recoverops/: __init__.py  __main__.py  cli.py  core.py
ai_recoverops/analyzers/: __init__.py  devops_analyzer.py  ml_analyzer.py  pattern_analyzer.py
ai_recoverops/core/: __init__.py  analyzer.py  detector.py  engine.py  fixer.py  models.py
ai_recoverops/detectors/: __init__.py  application_detector.py  database_detector.py  network_detector.py  system_detector.py
ai_recoverops/fixers/: __init__.py  container_fixer.py  database_fixer.py  network_fixer.py  service_fixer.py
ai_recoverops/utils/: __init__.py  logger.py
api/: Dockerfile  main.py  requirements.txt
aws/lambda_functions/: log_processor.py  remediation_executor.py
aws/ssm_automation/: remediation_runbook.yaml
backend/: config.py  main.py
backend/ai_engine/: failure_detector.py  fix_generator.py  root_cause_analyzer.py
backend/api/routes/: incidents.py  webhooks.py
backend/database/: connection.py  models.py  redis_client.py
backend/pipeline_monitor/: webhook_listener.py
backend/remediation/: executor.py
cicd-integrations/github-actions/: ai-recoverops-integration.yml
dashboard/: package-lock.json  package.json
dashboard-v2/: package.json
dashboard-v2/src/: App.js
dashboard-v2/src/pages/: Dashboard.js
dashboard-v2/src/services/: apiService.js
dashboard/public/: index.html  manifest.json
dashboard/src/: App.css  App.js  index.css
dashboard/src/components/: IncidentOverview.js
dashboard/src/components/Layout/: Header.js  Sidebar.js
dashboard/src/pages/: Analytics.js  Dashboard.js  Incidents.js  Logs.js  Models.js  Settings.js
dashboard/src/services/: apiService.js
data/: generate_synthetic_logs.py  test_logs.csv  test_logs.json  training_logs.csv
demo/: simulate_failures.py
deployment/: docker-compose.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: ai-recoverops-deployment.yaml
deployment/terraform/: main.tf
docs/: INSTALLATION.md  README.md
ml/: model_training.py  requirements.txt
notifications/: slack_notifier.py
remediation/: database_fixer.py  service_fixer.py
tests/: test_end_to_end.py
